--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="hero">
         <h1>Text To Voice <span>Converter</span></h1>
-        <textarea placeholder="Write anything here..."></textarea>
+        <textarea placeholder="Write or Paste anything here..."></textarea>
         <div class="row">
             <select></select>
             <button><img src="images/images/play.png"> Listen </button>
